--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<div class="container">
-		<embed src="cv.pdf#toolbar=0" type="application/pdf" width=100% height="1200px" />
+<!-- 		<embed src="cv.pdf#toolbar=0" type="application/pdf" width=100% height="1200px" /> -->
+<iframe src="cv.pdf#toolbar=0" width="100%" height="1200px"> </iframe>
 	</div>
 </body>
 </html>
